src/css/app.sass
@import 'quasar.variables.sass'

// app global css in Sass form
.small-screen-only
  @media (max-width: $breakpoint-xs-max)
    display: block
  @media (min-width: $breakpoint-sm-min)
    display: none

.large-screen-only
  @media (max-width: $breakpoint-xs-max)
    display: none
  @media (min-width: $breakpoint-sm-min)
    display: block

.constrain
  max-width: 975px
  margin: 0 auto

.login-size
  width: 250px

.my-align-right
  text-align: right
  padding: 5px

// Overall app theme //
body
  font-family: 'Open Sans', sans-serif

html
  // Force scrollbar visible at all times
  overflow-y: scroll

// Override default dark body background
body.body--dark
  background-color: $dark

// Override default dark card background
.q-card--dark
  background-color: rgba($dark, 0.3)
//background-color: $dark

// Override default dark editor background
.q-editor--dark
  background-color: rgba($dark, 0.3)

// Override default dark editor background
.q-dialog-plugin--dark
  background-color: rgba($dark, 0.9)

// Prepare background for color switching using transparent gradients
.background-gradient
  content: ""
  z-index: -2
  display: block
  position: fixed
  left: 0
  top: 0
  height: 100vh
  width: 100vw

  background: linear-gradient(160deg, rgba(0, 0, 0, 0), $dark 50%)
  transition: background-color 1000ms ease


// Test //
.background-gradient-darken
  content: ""
  display: block
  position: fixed
  z-index: -1
  left: 0
  top: 0
  height: 100vh
  width: 100vw
  background: linear-gradient(180deg, rgba(0, 0, 0, 0), $dark)

//.background-gradient.colorful
//  background-image: linear-gradient(0deg,#cf5c5c,#c19b4a,#def2a0,#c6ee4a,#42eca6,#64b3d9,#208ea2,#498ada,#5b73df,#897ed3,#cf5c5c,#c19b4a)
//  opacity: 0.7
//  background-size: 100% 1100%
//  background-image: linear-gradient(0deg, $dark, $dark, #062b13, $dark, $dark)
//  background-size: 100% 600%
//  animation: animateBg 10s linear infinite

@keyframes animateBg
  0%
    background-position: 0 0
  100%
    background-position: 0 100%


// Configure color schemes for LayoutColorChange plugin //

.background-gradient.forum
  //background-color: #404040
  background: linear-gradient(90deg, #2c5e92 0%, #552f6d 80%)

.background-gradient.posteditor
  //background-color: #552f6d
  background: linear-gradient(90deg, #c074b2, #8ab5e8)

.background-gradient.userprofile
  background-color: #2c5e92

.background-gradient.myposts
  background-color: #0e5c2a

// MainLayout styling //

.q-toolbar__title
  font-size: 30px
  font-family: 'Montserrat', sans-serif
  font-weight: 500
  color: white

.q-toolbar
  @media (min-width: $breakpoint-xs-min)
    height: 70px

.logo
  @media (min-width: 415px)
    align-items: center
    justify-content: center

.logo-text
  @media (max-width: 414px)
    display: none

.logo-text-link
  color: white
  text-decoration: none

.menu-list .q-item
  border-radius: 0 32px 32px 0

.header-background
  background-color: rgba($dark, 0.0)
  transition: background-color 300ms ease

.header-background.scroll
  background-color: rgba($dark, 0.7)

.q-drawer--dark
  background-color: rgba($dark, 0)

.q-drawer--dark.q-drawer--mobile
  background-color: $dark


// Miscellaneous styles //

.links-primary
  a, a:active, a:hover, a:visited
    text-decoration: none
    color: $primary

.emoji-picker-color-override
  --ep-color-bg: #{rgba($dark, 0.6)} !important
  --ep-color-sbg: #{rgba($dark, 0.3)} !important
  --ep-color-active: #{$primary} !important

